2023-10-30_openshift_ceps/okd-training/route-http.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-http
spec:
  host: example-http.apps.okd.aws.sikademo.com
  to:
    kind: Service
    name: hello-world-clusterip
  port:
    targetPort: http
