2023-10-30_openshift_ceps/okd-training/route-https.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-https
spec:
  host: example.ceps.sikademo.com
  to:
    kind: Service
    name: hello-world-clusterip
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN EC PRIVATE KEY-----
      MHcCAQEEIA18GwB4J0Pi7P3+1aAV0VRZ768ikctPQrIOdW2KTxKQoAoGCCqGSM49
[...]
      Vy4WzUq9bGUYJYkQ4V9/KXxJezUODz/1JQ==
      -----END EC PRIVATE KEY-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEOjCCAyKgAwIBAgISBL/YXASxJVV/KOR6mTobuO5/MA0GCSqGSIb3DQEBCwUA
[...]
      64hE3gAAHVv7sogDVg4Ip3e/byl7DpuUSIz1oNBY
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
